prevent body scroll on mobile

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -607,10 +607,10 @@ h4.flex {
     opacity: 1;
   }
 
-  body.no-scroll {
+  /* body.no-scroll {
     overflow: hidden;
     -webkit-overflow-scrolling: touch;
-  }
+  } */
 
   .navbar a {
     border-radius: none;
@@ -668,7 +668,7 @@ body {
   -webkit-font-feature-settings: "kern", "liga", "clig", "calt";
   font-feature-settings: "kern", "liga", "clig", "calt";
   overscroll-behavior: none;
-  overflow-y: scroll;
+  overflow: hidden;
   position: relative;
 }
 
